--- a/css/style.css
+++ b/css/style.css
@@ -45,8 +45,6 @@ body {
 /* logo */
 .main-header {
   border-bottom: 1px solid #ececec;
-  padding-top: 24px;
-  padding-bottom: 25px;
 }
 
 .header {
@@ -76,23 +74,30 @@ body {
 /* site nav */
 
 .link {
+  display: block;
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.1;
   letter-spacing: 0.02em;
   text-decoration: none;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .item-nav {
   display: block;
 }
-
 .site-nav {
   display: flex;
   margin: 0;
   padding: 0;
   margin-left: 93px;
+}
+.site-nav .link {
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-nav .item-nav:not(:last-child) {
@@ -106,8 +111,20 @@ body {
 
 .site-nav .link.current {
   color: var(--accent-color);
+  position: relative;
 }
 
+.link.current::after {
+  position: absolute;
+  bottom: 0;
+  display: block;
+  content: "";
+  width: 100%;
+  height: 4px;
+  border-radius: 4px;
+  background-color: var(--accent-color);
+  bottom: -1px;
+}
 /*contacts*/
 
 .contacts {
@@ -133,11 +150,19 @@ body {
   line-height: 1.1;
   letter-spacing: 0.02em;
   text-decoration: none;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-icon {
   margin-right: 10px;
   fill: #757575;
+
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-link:hover .contact-icon,
@@ -269,6 +294,28 @@ body {
 .list-item-img {
   display: block;
 }
+.card-we-do {
+  display: block;
+  position: relative;
+}
+.picture-description {
+  position: absolute;
+  height: 70px;
+  width: 370px;
+  bottom: 0px;
+  padding-top: 27px;
+  padding-bottom: 27px;
+
+  background-color: rgba(47, 48, 58, 0.8);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: #ffffff;
+}
 
 /*section-team*/
 
@@ -351,6 +398,10 @@ body {
   height: 44px;
   border-radius: 50%;
   color: var(--heading-color);
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .masters-soc-icon {
@@ -407,19 +458,20 @@ body {
   border-radius: 4px;
   width: 100%;
   height: 100%;
+
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-soc-icon {
   fill: #afb1b8;
-}
-/* 
-.customers-item:hover .customers-soc-icon {
-  fill: #2196f3;
+
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.customers-item:hover {
-  border-color: #2196f3;
-}*/
 .customers-link:hover .customers-soc-icon,
 .customers-link:focus .customers-soc-icon {
   fill: #2196f3;
@@ -497,6 +549,10 @@ body {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
   text-decoration: none;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-footer .contact-footer:hover,
@@ -557,6 +613,10 @@ body {
   letter-spacing: 0.03em;
   cursor: pointer;
   border-radius: 4px;
+
+  transition-property: box-shadow, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .page-nav .button-link:hover,
@@ -596,6 +656,10 @@ body {
   display: flex;
   margin-right: 30px;
   margin-bottom: 30px;
+
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-img:hover,
@@ -622,6 +686,51 @@ body {
   text-decoration: none;
 }
 
+.overlay-item-projects {
+  display: block;
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+
+  transform: translateY(+100%);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link-img:hover .overlay,
+.link-img:focus .overlay {
+  transform: translateY(0);
+}
+
+.link-img:hover .overlay-item,
+.link-img:focus .overlay-item {
+  opacity: 1;
+}
+
+.overlay-item {
+  width: 322px;
+  height: 168px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.55;
+  letter-spacing: 0.03em;
+  color: var(--heading-color);
+  opacity: 0;
+}
+
 .item-text {
   padding-top: 20px;
   padding-left: 24px;
@@ -635,4 +744,56 @@ body {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+}
+/*  modal  */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.9);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  width: 528px;
+  height: 581px;
+
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+  transform: translate(-50%, -50%) scale(1);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-close {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+  width: 30px;
+  height: 30px;
+  background-color: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
 }
